apps/cats/manifests/middleware-path-replace.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: path-replace
  namespace: cats
spec:
  replacePath:
    path: /random
