apps/cats/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats
  namespace: cats
  labels:
    app.kubernetes.io/name: cats
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cats
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cats
    spec:
      serviceAccountName: cats
      containers:
        - name: cats
          image: ghcr.io/paulfantom/cats:0.0.3
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 1m
              memory: 12Mi
