apps/cats/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cats
  namespace: cats
  labels:
    app.kubernetes.io/name: cats
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: cats
