apps/cats/manifests/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-ingress
  namespace: cats
spec:
  ingressClassName: cloudflare
  rules:
  - host: cats.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: cats
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cats.ankhmorpork.thaum.xyz
    secretName: cats-tls
