apps/cats/manifests/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: cats
  name: cats-nginx
  namespace: cats
spec:
  ingressClassName: nginx
  rules:
  - host: cats.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: cats
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cats.ankhmorpork.thaum.xyz
    secretName: cats-tls
