apps/cats/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    reloader.homer/group: Ankh Cloud
    reloader.homer/logo: https://media.istockphoto.com/id/662195090/de/vektor/minimale-cat-logo.jpg?s=612x612&w=0&k=20&c=tx_rWZx2Uzxh-HOHlgFBnyQnm4CzrXO3fAhcW1Mp1i8=
    reloader.homer/name: Random Cat
    reloader.homer/subtitle: Cat as a Service
    nginx.ingress.kubernetes.io/app-root: /random
  labels:
    app.kubernetes.io/name: cats
    # probe: enabled
    reloader.homer/enabled: "true"
  name: cats
  namespace: cats
spec:
  ingressClassName: nginx
  rules:
  - host: cats.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: cats
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cats.ankhmorpork.thaum.xyz
    secretName: cats-tls
